--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@coreui/react": "^5.0.0-alpha.3",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^1.0.6",
     "@mui/icons-material": "^5.14.12",
     "@mui/joy": "^5.0.0-beta.11",
     "@mui/material": "^5.14.12",
