--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@coreui/coreui": "^5.0.0-alpha.2",
     "@coreui/react": "^5.0.0-alpha.3",
     "@emotion/react": "^11.11.1",
