--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.12",
     "@mui/joy": "^5.0.0-beta.11",
-    "@mui/material": "^5.14.12",
+    "@mui/material": "^5.14.16",
     "@reduxjs/toolkit": "^1.9.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.5.1",
+    "axios": "^1.6.0",
+    "axios-cookiejar-support": "^4.0.7",
     "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
-    "jwt-decode": "^3.1.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.291.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,7 +29,9 @@
     "recharts": "^2.9.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "request": "^2.88.2",
     "styled-components": "^6.1.0",
+    "tough-cookie": "^4.1.3",
     "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
