--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.0",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
